Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10391

Shortcut do not appears on desktop after Firefox 28 installation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.14
    • Shell
    • None
    • r69653

    Description

      Install Firefox 28.
      After installation, shortcut must appear on desktop.
      But this does not happens: ros_ff_install_no_shortcut.png.
      Debug log: ros_ff_install_log.txt.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              Vort Vort
              Votes:
              5 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: